# Daedalus

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
audio/: CMakeLists.txt
audio/include/daedalus/audio/: audio_system.h  audio_types.h  i_audio_engine.h
audio/src/: audio_system.cpp  miniaudio_engine.cpp  miniaudio_engine.h
audio/tests/: CMakeLists.txt  test_audio_engine.cpp
core/: CMakeLists.txt
core/include/daedalus/core/: assert.h  create_platform.h  types.h
core/src/: create_platform.cpp
core/src/ecs/: world.cpp
core/src/memory/: frame_allocator.cpp  heap_allocator.cpp  pool_allocator.cpp
core/src/platform/: macos_platform.cpp  macos_platform.h
core/src/threading/: job_system.cpp
core/tests/: CMakeLists.txt  test_ecs_world.cpp  test_transform_component.cpp
editor/: CMakeLists.txt
editor/include/daedalus/editor/: compound_command.h  edit_map_document.h  editor_layer.h  entity_def.h  i_command.h  i_editor_tool.h  light_def.h  prefab_def.h  render_settings_data.h  scene_settings.h  selection_state.h  undo_stack.h
editor/src/: main.cpp  main.mm  material_catalog.cpp  material_catalog.h
editor/src/catalog/: material_catalog.cpp  material_catalog.h  model_catalog.cpp  model_catalog.h
editor/src/document/: edit_map_document.cpp  emap_sidecar.cpp  emap_sidecar.h  map_doctor.cpp  map_doctor.h  map_doctor_runner.cpp  undo_stack.cpp
editor/src/document/commands/: cmd_add_detail_brush.cpp  cmd_add_detail_brush.h  cmd_delete_entity.cpp  cmd_delete_entity.h  cmd_delete_light.cpp  cmd_delete_light.h  cmd_delete_sector.cpp  cmd_delete_sector.h  cmd_draw_sector.cpp  cmd_draw_sector.h  cmd_duplicate_sector.cpp  cmd_duplicate_sector.h  cmd_link_portal.cpp  cmd_link_portal.h  cmd_move_entity.cpp  cmd_move_entity.h  cmd_move_light.cpp  cmd_move_light.h  cmd_move_sector.cpp  cmd_move_sector.h  cmd_move_vertex.cpp  cmd_move_vertex.h  cmd_paste_sector.cpp  cmd_paste_sector.h  cmd_place_entity.cpp  cmd_place_entity.h  cmd_place_light.cpp  cmd_place_light.h  cmd_place_prefab.cpp  cmd_place_prefab.h  cmd_remove_detail_brush.cpp  cmd_remove_detail_brush.h  cmd_rotate_entity.cpp  cmd_rotate_entity.h  cmd_rotate_sector.cpp  cmd_rotate_sector.h  cmd_save_prefab.cpp  cmd_save_prefab.h  cmd_scale_entity.cpp  cmd_scale_entity.h  (+49 more)
editor/src/panels/: asset_browser_panel.cpp  asset_browser_panel.h  entity_gpu_cache.cpp  entity_gpu_cache.h  floor_layer_panel.cpp  floor_layer_panel.h  help_panel.cpp  help_panel.h  layers_panel.cpp  layers_panel.h  normal_map_generator_panel.cpp  normal_map_generator_panel.h  object_browser_panel.cpp  object_browser_panel.h  output_log.cpp  output_log.h  property_inspector.cpp  property_inspector.h  render_settings_panel.cpp  render_settings_panel.h  splash_screen.h  splash_screen.mm  sprite_anim_math.h  staircase_generator_panel.cpp  staircase_generator_panel.h  uv_utils.h  viewport_2d.cpp  viewport_2d.h  viewport_3d.cpp  viewport_3d.h
editor/src/tools/: draw_sector_tool.cpp  draw_sector_tool.h  geometry_utils.cpp  geometry_utils.h  select_tool.cpp  select_tool.h  vertex_tool.cpp  vertex_tool.h
editor/tests/: CMakeLists.txt  test.dmap  test.emap  test_commands.cpp  test_geometry_utils.cpp  test_map_doctor.cpp  test_mesh_albedo_path.cpp  test_prefab.cpp  test_rotated_sprite.cpp  test_sidecar_entities.cpp  test_sidecar_render_settings.cpp  test_sprite_anim.cpp  test_undo_stack.cpp
physics/: CMakeLists.txt
physics/include/daedalus/physics/: i_physics_world.h  physics_types.h
physics/src/: jolt_physics_world.cpp  jolt_physics_world.h
physics/tests/: CMakeLists.txt  test_physics_world.cpp
render/: CMakeLists.txt
render/include/daedalus/render/: create_render_device.h  frame_renderer.h  i_asset_loader.h  mesh_data.h  mipmap_generator.h  normal_map_generator.h  particle_pool.h  rt_scene_manager.h  scene_data.h  scene_view.h  vertex_types.h  vox_mesher.h  vox_types.h
render/shaders/metal/: bloom.metal  color_grade_frag.metal  common.h  decal.metal  decal_rt_inject.metal  depth_copy.metal  depth_prepass.metal  dof_blur.metal  dof_coc.metal  dof_composite.metal  fxaa_frag.metal  gbuffer.metal  lighting.metal  motion_blur_main.metal  optional_fx_frag.metal  particle_density_build.metal  particle_render.metal  particle_simulate.metal  path_trace.metal  rt_history_copy.metal  rt_remodulate.metal  shadow_depth.metal  skybox.metal  ssao.metal  ssr_main.metal  svgf_atrous.metal  svgf_temporal.metal  svgf_variance.metal  taa.metal  tone_mapping.metal  transparent.metal  volumetric_fog_composite.metal  volumetric_fog_integrate.metal  volumetric_fog_scatter.metal  volumetric_fog_scatter_rt.metal
render/src/: asset_loader.cpp  create_render_device.cpp
render/src/loader/: asset_loader.cpp  mipmap_generator.cpp  mipmap_generator.h  normal_map_generator.cpp
render/src/render_graph/: render_graph.cpp
render/src/renderer/: frame_renderer.cpp  rt_scene_manager.cpp
render/tests/: CMakeLists.txt  test_billboard_render_system.cpp  test_decal_render_system.cpp  test_particle_render_system.cpp  test_post_fx.cpp  test_rt_scene_manager.cpp  test_sprite_animation_system.cpp  test_ssr.cpp  test_transparent_pass.cpp  test_volumetric_fog.cpp  test_vox_mesher.cpp
script/: CMakeLists.txt
script/include/daedalus/script/: i_script_engine.h  script_types.h
script/src/: lua_ecs_bindings.cpp  lua_ecs_bindings.h  sol_script_engine.cpp  sol_script_engine.h  stub.cpp
script/tests/: CMakeLists.txt  test_script_engine.cpp
tools/vox_bake/: CMakeLists.txt  cgltf_impl.cpp  main.cpp  surface_voxelizer.h  test_vox_bake.cpp  vox_writer.h
world/: CMakeLists.txt
world/include/daedalus/world/: dlevel_io.h  dmap_io.h  i_pathfinder.h  i_portal_traversal.h  i_world_map.h  map_data.h  sector_tessellator.h  world_types.h
world/src/: dlevel_binary.cpp  dmap_binary.cpp  dmap_json.cpp  portal_traversal.cpp  sector_pathfinder.cpp  sector_tessellator.cpp  world_map.cpp
world/tests/: CMakeLists.txt  test_dlevel_io.cpp  test_dmap_io.cpp  test_pathfinder.cpp  test_portal_traversal.cpp  test_sector_tessellator.cpp
(+53 files in other folders)
